# gridplan-eval

./: .gitignore  README.md  pyproject.toml
configs/: 15x15_startup.yaml  15x15_startup_non_topologicpy.yaml  example_config.yaml
data/: deduplicated.jsonl  test_set.jsonl
data/eval_results/anthropic_claude-opus-4/: 3c5eb08d-491b-45e2-b987-d5a021574eea.json  465dbe95-3aba-4651-bad1-7f4f7e547328.json  488c89aa-f9a8-4539-933d-882fcab8e876.json  54c9bb01-faa5-438c-b04d-5e19d82a2bf4.json  59a46826-64ea-4670-83a2-77d4d9edd2b8.json  6023465e-ac6a-4703-ac2f-62aed358cc31.json  65d156ba-6294-4d31-9e6b-3c878344de02.json  6817c1cc-8d04-4085-85d0-0d4c24f90f96.json  a8322dbf-834a-4727-805b-b5d37c965466.json  a84607e0-b7db-4ec8-8ba1-8adc50fecb26.json  all_constraints.csv  dc60fb9a-bceb-48de-a582-7a9094d59a7e.json  e1b84288-cebf-4a81-a90e-55e473502398.json  e65cb22d-cc3f-420e-a8a9-1e44fb8f219a.json  f519701b-5904-4426-b674-042dc49be681.json  f58c02fb-5f69-42b7-8338-da1edc7d8bde.json  summary.csv
data/eval_results/anthropic_claude-sonnet-4/: 2b0fb727-d5f0-428d-af9d-60b14986dfb8.json  3977c413-74bd-4f39-8a21-d4855c841623.json  6abd683d-0a02-4be3-bf8a-273da5c3c344.json  6ef34c92-3e0d-4790-9855-eb4609789e05.json  7431ef31-f67f-4c74-be41-969d528daffd.json  88999f0f-279b-42bc-9399-703931070d0b.json  88ae997e-eca6-4130-bc4e-6e9892d416a1.json  9291e5eb-6511-4d23-a734-1ee06fa639b4.json  9b25e86a-93f7-41bf-9b3e-eb125a35466b.json  a41dd30c-8def-4aa8-bd4b-b856eb7f673a.json  a5714c09-0b43-4e94-ac44-dd938f39e74f.json  aab1b737-f113-463d-b02a-96538e2d6654.json  all_constraints.csv  b28ffa75-0aba-4aac-8a8c-f56221ec0be4.json  c9f0b29d-9d35-4462-9131-7123b8d47a4f.json  f6b91f4f-2a2f-4d4c-850e-90d76ecdfd3b.json  summary.csv
data/eval_results/deepseek_deepseek-chat-v3-0324:free/: 25375bdf-b220-4390-a08a-dc48317af16d.json  45290fc6-bc5f-461a-9d64-541ebdac574c.json  4765cfd1-5662-481d-b8f0-2491397728c1.json  4b8da711-cf59-4472-af4c-f75da51cfef0.json  55c3e4c6-100a-4da2-9ed2-b2b3e660b97a.json  5f2c1d01-05ff-467e-b889-49d1e484930f.json  6a61d7c7-dbfb-455e-9926-8e84fdcdd394.json  720a957e-c701-419d-9bab-7a6692629e40.json  79f020fb-f9df-422d-a15e-3ffd44f66a4d.json  7bf912f6-cd99-47c2-acd8-79d4198b8ae1.json  all_constraints.csv  (+6 more)
src/gridplan_eval/: __init__.py  evaluator.py  run_eval.py
(+180 files in other folders)
