[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gridplan-eval"
version = "2.0.0"
description = "Constraint evaluation framework for grid-based spatial planning and floor plan layouts"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
keywords = ["floor-plan", "constraint-evaluation", "spatial-planning", "architecture", "llm-evaluation"]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "networkx>=3.0",
    "tqdm>=4.0",
    "numpy>=1.20",
    "rich>=13.0",
]

[project.optional-dependencies]
topologic = [
    "topologicpy>=0.8.0",
]
viz = [
    "topologicpy>=0.8.0",
    "matplotlib>=3.5",
    "plotly>=5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
all = [
    "topologicpy>=0.8.0",
    "matplotlib>=3.5",
    "plotly>=5.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
gridplan-eval = "gridplan_eval.run_eval:main"
gridplan-sanitize = "gridplan_eval.sanitize.cli:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/gridplan-eval"
Documentation = "https://github.com/YOUR_USERNAME/gridplan-eval#readme"
Repository = "https://github.com/YOUR_USERNAME/gridplan-eval"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (may be slower)",
    "slow: Slow running tests",
    "topologic: Tests requiring topologicpy",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
